# Tui-Desktop-Environment

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: FindPAM.cmake
config/: tdesktop.conf
config/themes/: dark.theme  default.theme  hacker.theme
docs/: faq.md  keybindings.md  user-guide.md
src/: CMakeLists.txt  main.cpp
src/auth/: login.cpp  login.h  pam_auth.cpp  pam_auth.h  shadow_auth.cpp  shadow_auth.h
src/core/: buffer.cpp  buffer.h  color.cpp  color.h  event.cpp  event.h  renderer.cpp  renderer.h  terminal.cpp  terminal.h
src/desktop/: command_panel.cpp  command_panel.h  desktop.cpp  desktop.h  launcher.cpp  launcher.h  taskbar.cpp  taskbar.h  window.cpp  window.h  workspace.cpp  workspace.h
src/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  term_detect.cpp  term_detect.h
src/notification/: dbus_listener.cpp  dbus_listener.h  notify.cpp  notify.h
src/utils/: config.cpp  config.h  helpers.cpp  helpers.h  logger.cpp  logger.h  registry.cpp  registry.h
src/widgets/: button.cpp  button.h  listbox.cpp  listbox.h  menu.cpp  menu.h  regeditor.cpp  regeditor.h  textbox.cpp  textbox.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_buffer.cpp
